--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -100,7 +100,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9s0-m9-DCz" userLabel="btnRep">
-                                                            <rect key="frame" x="17.5" y="5" width="16" height="16"/>
+                                                            <rect key="frame" x="17" y="5" width="16" height="16"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="16" id="K5O-Pd-HGn"/>
                                                                 <constraint firstAttribute="height" constant="16" id="qyT-bC-EJQ"/>
@@ -249,17 +249,17 @@
                     </view>
                     <navigationItem key="navigationItem" id="Iso-I7-dG2">
                         <nil key="title"/>
-                        <barButtonItem key="leftBarButtonItem" title="Log out" id="ldp-Yr-zKz">
+                        <barButtonItem key="leftBarButtonItem" image="logout" id="ldp-Yr-zKz">
                             <connections>
                                 <action selector="logOut:" destination="zEx-UO-hpG" id="9YT-zn-Iy8"/>
                             </connections>
                         </barButtonItem>
                         <view key="titleView" contentMode="scaleToFill" id="D9D-af-KbT">
-                            <rect key="frame" x="113" y="6" width="150" height="33"/>
+                            <rect key="frame" x="78" y="6" width="219" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="Zjt-ad-5Px">
-                                    <rect key="frame" x="60" y="1.5" width="30" height="30"/>
+                                    <rect key="frame" x="94.5" y="2" width="30" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="Zjt-ad-5Px" secondAttribute="height" multiplier="1:1" id="GgT-bF-STh"/>
                                         <constraint firstAttribute="width" constant="30" id="xhM-ID-6Jq"/>
@@ -305,6 +305,7 @@
         <image name="comment" width="30" height="30"/>
         <image name="icon" width="263" height="257"/>
         <image name="launch" width="225" height="225"/>
+        <image name="logout" width="28" height="24"/>
         <image name="new" width="28" height="28"/>
         <image name="othersLike" width="28" height="28"/>
         <image name="reTweet" width="28" height="28"/>
